# RPG-game-raylib

./: .clangd  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Makefile  Makefile.ps1  README.md  TODO.md  build_error.txt  build_output.txt  compile_flags.txt  run-windows.bat  run-windows.ps1  run.bat  setup.ps1  setup.sh
.github/workflows/: build.yml
.sisyphus/handoff/: handoff.md
Backups/: Makefile
_bmad/: config.toml  config.user.toml
_bmad/_config/: bmad-help.csv  files-manifest.csv  manifest.yaml  skill-manifest.csv
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/gds/: config.yaml
_bmad/tea/: config.yaml
assets/data/: animations.json  enemies.json  items.json  sprites.json  tiles.json
assets/maps/: floorA.json  floorB.json  floorC.json  testing_size.json  tutorial.json
assets/maps/World_generation/: background_map.json  template_untuk_copy_object.json
assets/maps/World_generation/corridor/corridor_h/: corridor_h1.json  corridor_h10.json  corridor_h2.json  corridor_h3.json  corridor_h4.json  corridor_h5.json  corridor_h6.json  corridor_h7.json  corridor_h8.json  corridor_h9.json
assets/maps/World_generation/corridor/corridor_v/: corridor_v1.json  corridor_v10.json  corridor_v2.json  corridor_v3.json  corridor_v4.json  corridor_v5.json  corridor_v6.json  corridor_v7.json  corridor_v8.json  corridor_v9.json
assets/maps/World_generation/rooms/boss/: boss1_u.json
assets/maps/World_generation/rooms/elite/template_u/: elite1_u.json  elite2_u.json
assets/maps/World_generation/rooms/elite/template_ud/: elite1_ud.json
assets/maps/World_generation/rooms/elite/template_ur/: elite1_ur.json
assets/maps/World_generation/rooms/enemy/template_u/: enemy1_u.json  enemy2_u.json
assets/maps/World_generation/rooms/enemy/template_ud/: enemy1_ud.json
assets/maps/World_generation/rooms/enemy/template_udr/: enemy1_udr.json
assets/maps/World_generation/rooms/enemy/template_udrl/: enemy1_udrl.json
assets/maps/World_generation/rooms/enemy/template_ur/: enemy1_ur.json
assets/maps/World_generation/rooms/finish/: finish1_u.json
assets/maps/World_generation/rooms/start/: start1_u.json
assets/maps/World_generation/rooms/trader/: trader1_u.json
assets/maps/World_generation/rooms/treasure/template_u/: treasure1_u.json  treasure2_u.json
assets/maps/World_generation/worldseed/save_1/: meta.json  runtime.json
assets/textures/pauseButt/: pause-bg.png~
docs/: README.md  assets-structure.md  build.md  debug-keybinds.md  item_spawn_rng_issue.md  project-structure.md  save-system-changelog-ai.md  save-system-changelog.md  save-system.md  sign-system-ai.md  sign-system-ui.md  source-structure.md  worldgeneration.md
include/: animation.h  button.h  buttonImg.h  buttonTxt.h  button_img.h  combat.h  damageQueue.h  debug.h  enemy.h  entities.h  entity.h  frustum.h  game.h  game_state_saver.h  hud.h  input.h  inputLinkedList.h  interaction.h  inventory.h  item.h  keybindsTab.h  loading_screen.h  mainMenu.h  map.h  mapLogic.h  mapstack.h  movement.h  pauseMenu.h  player.h  player_camera.h  player_input.h  player_ui.h  popup.h  propsbehavior.h  render.h  screen.h  tiles.h  tileset.h  tileson_map.h  videoTab.h
include/core/: game_state_saver.h  loading_screen.h  screen.h  seedmanager.h  utils.h
include/debug/: debug.h  game_debug.h
include/entities/: enemy.h  enemy_ai.h  entities.h  entity.h  player.h
include/items/: inv-bst-sort.h  inventory.h  item.h
include/map/: map.h  mapLogic.h  propsbehavior.h  worldgenenartion.h  worldgenio.h
include/rendering/: animation.h  fonts.h  hud.h  tiles.h
include/systems/: audioManager.h  combat.h  combatTurn.h  datadriven.h  effects.h  input.h  inputLinkedList.h  interaction.h  keybindManager.h  movement.h
include/ui/: audioTab.h  button.h  buttonTxt.h  gameOverScreen.h  keybindsTab.h  pauseMenu.h  popup.h  saveLoadScreen.h  videoTab.h
include/utils/: effectQueue.h  mapstack.h
lib/tileson/: tileson.hpp
map_level/: worldteste.tmj
map_level_tsj/: contoh.tsj
resource/: Makefile  logic.cpp  main.cpp  screen_handler.cpp
src/: Makefile  animation.cpp  audioTab.cpp  buttonImg.cpp  buttonTxt.cpp  button_img.cpp  combat.cpp  damageQueue.cpp  debug.cpp  debugmode.cpp  dungeon.h  effects.cpp  enemy.cpp  entities.cpp  frustum.cpp  game.cpp  game_state_saver.cpp  hud.cpp  input.cpp  inputLinkedList.cpp  input_linkedlist.cpp  interaction.cpp  inventory.cpp  item.cpp  keybindsTab.cpp  loading_screen.cpp  logic.cpp  main.cpp  mainMenu.cpp  map.cpp  mapLogic.cpp  mapstack.cpp  movement.cpp  pauseMenu.cpp  player.cpp  player_camera.cpp  player_input.cpp  player_ui.cpp  popup.cpp  propsbehavior.cpp  (+7 more)
src/core/: game_state_saver.cpp  loading_screen.cpp  main.cpp  mapstack.cpp  screen_handler.cpp  seedmanager.cpp
src/debug/: debugmode.cpp
src/entities/: enemy.cpp  enemy_ai.cpp  entities.cpp  player.cpp
src/entities/enemies/: enemy.cpp  enemy_ai.cpp
src/include/: screen.h
src/items/: inv-bst-sort.cpp  inventory.cpp  item.cpp
src/map/: map.cpp  mapLogic.cpp  mapstack.cpp  propsbehavior.cpp  worldgenenartion.cpp  worldgenio.cpp  worldgenlogic.cpp
src/rendering/: animation.cpp  hud.cpp  tiles.cpp
src/systems/: audioManager.cpp  combat.cpp  combatTurn.cpp  datadriven.cpp  effects.cpp  input.cpp  inputLinkedList.cpp  interaction.cpp  keybindManager.cpp  movement.cpp
src/ui/: audioTab.cpp  gameOverScreen.cpp  keybindsTab.cpp  mainMenu.cpp  pauseMenu.cpp  popup.cpp  saveLoadScreen.cpp  videoTab.cpp
tests/: constants_test.cpp
world_json/: cave.json  exampleworldmap.json  exampleworldmap_2.json  floorA.json  floorB.json  floorC.json  inside.json  inside.tmj  light.json  outside.tmj  outsideDark.json  outsideDark.tmj  outsideLight.json  outsideLight.tmj  testermap.tmj  tutorial.json
(+1 files in other folders)
